--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,10 +61,10 @@ body {
 .hero {
     position: relative;
     background-image: url('header.jpg');
-    background-color: #b4d9b0; /* Backup color */
-    background-repeat: no-repeat; /* Set to 'repeat' if desired */
-    background-position: center; /* Adjust as needed */
-    background-size:cover; /* Adjust as needed */
+    background-color: #b4d9b0; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    background-size:cover; 
     text-align: center;
     color: #fff;
     padding: 40px;
